--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                       <a href="assets/images/face.jpg" data-lightbox="image-1" data-title="Facebook Clone"><i class="fa fa-search"></i></a>
                       <h4>Facebook Clone</h4>
                       <span>Namal University Mianwali</span>
-                      <p>simplified version of Facebook without photos recreated with Python and Tkinter for GUI. The program allows users to cre￾ate an account, log in, add friends, post status, friends' posts and pages. The project was developed using the Tkinter library for GUI and SQLite3 for database management.</p>
+                      <p>simplified version of Facebook without photos recreated with Python,Tkinter for GUI and SQLite3 for database management. The program allows users to cre￾ate an account, log in, add friends, post status, friends' posts and pages.</p>
                     </figcaption>
                   </figure>
                 </div>
