--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                   <h4>PROFESSIONAL SUMMARY</h4>
                   <p>
                     Detail-oriented computer scientist with a solid foundation in Python programming, databases, data
-                    analysis, and visualization. Currently interning as a Backend Developer, where I develop backend
+                    analysis, and visualization. Currently working as a Full Stack Developer, where I develop backend
                     services using JavaScript, Node.js, and Express, and design database schemas. Experienced in
                     implementing SIEM solutions with Wazuh and integrating network security tools. Skilled in managing
                     projects, improving processes, and maintaining reliable backend systems. Seeking to leverage
@@ -193,7 +193,7 @@
               </div>
               <div class="col-md-6">
                 <div class="right-text">
-                  <h4>Backend Developer | EZMD Solutions, YANA Medical Project</h4>
+                  <h4>Full Stack Developer | EZMD Solutions, YANA Medical Project</h4>
                   <p><strong>June 2024 - Present</strong></p>
                   <p>
                     Developing backend services for YANA Medical, a healthcare project providing medical food services to patients. Designing and implementing scalable APIs using JavaScript, Node.js, and Express. Managing database interactions, designing schemas, and implementing data in SQL databases. Collaborating with frontend developers to ensure seamless integration and functionality of the application.
@@ -353,6 +353,7 @@
               </ul></span
             >
           </div>
+          
           <div class="row">
             <div class="right-content">
               <div class="container">
