--- a/index.html
+++ b/index.html
@@ -91,12 +91,12 @@
                 <div class="right-text">
                   <h4>PROFESSIONAL SUMMARY</h4>
                   <p>
-                    Detail-oriented computer scientist with a solid foundation in Python programming, databases, data
-                    analysis, and visualization. Currently working as a Full Stack Developer, where I develop backend
-                    services using JavaScript, Node.js, and Express, and design database schemas. Experienced in
-                    implementing SIEM solutions with Wazuh and integrating network security tools. Skilled in managing
-                    projects, improving processes, and maintaining reliable backend systems. Seeking to leverage
-                    technical expertise and innovative thinking in a dynamic and collaborative environment.
+                    Detail-oriented computer scientist with a solid foundation in Python programming, databases, data analysis, and visualization. 
+                    Currently working as a Full Stack Developer, where I develop backend services using JavaScript, Node.js, and Express, and design database schemas. 
+                    Proficient in frontend technologies, including React and Tailwind CSS, to create responsive and user-friendly interfaces. 
+                    Experienced in implementing SIEM solutions with Wazuh and integrating network security tools. 
+                    Skilled in managing projects, improving processes, and maintaining reliable backend systems. 
+                    Seeking to leverage technical expertise and innovative thinking in a dynamic and collaborative environment.
                   </p>
                 </div>
               </div>
@@ -148,7 +148,7 @@
                 <div class="first-service-icon service-icon"></div>
                 <h4>Development</h4>
                 <p>
-                  JavaScript | Node.js | Express | REST APIs | Python | HTML | CSS | SQL | MongoDB | GitHub | Linux | CI/CD | API Development | Authentication Systems | Middleware | Data Management | Debugging
+                  JavaScript | Node.js | Express | REST APIs | Python | HTML | CSS | React | Tailwind CSS | SQL | MongoDB | Git | Linux | CI/CD | API Development | Authentication Systems | Middleware | Debugging
                 </p>
               </div>
             </div>
@@ -196,7 +196,7 @@
                   <h4>Full Stack Developer | EZMD Solutions, YANA Medical Project</h4>
                   <p><strong>June 2024 - Present</strong></p>
                   <p>
-                    Developing backend services for YANA Medical, a healthcare project providing medical food services to patients. Designing and implementing scalable APIs using JavaScript, Node.js, and Express. Managing database interactions, designing schemas, and implementing data in SQL databases. Collaborating with frontend developers to ensure seamless integration and functionality of the application.
+                    Developing backend services and frontend applications for YANA Medical, a healthcare project providing medical food services to patients. Designing and implementing scalable APIs using JavaScript, Node.js, and Express. Managing database interactions, designing schemas, and implementing data in SQL databases. Collaborating with frontend developers to ensure seamless integration and functionality of the application using React.
                   </p>
                 </div>
               </div>
