Added a new Project

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
               </div>
               <div class="col-md-6">
                 <div class="right-text">
-                  <h4>Full Stack Developer | EZMD Solutions, YANA Medical Project</h4>
+                  <h4>Jr. Software Engineer | EZMD Solutions, YANA Medical Project</h4>
                   <p><strong>June 2024 - Present</strong></p>
                   <p>
                     Developing backend services and frontend applications for YANA Medical, a healthcare project providing medical food services to patients. Designing and implementing scalable APIs using JavaScript, Node.js, and Express. Managing database interactions, designing schemas, and implementing data in SQL databases. Collaborating with frontend developers to ensure seamless integration and functionality of the application using React.
@@ -242,6 +242,17 @@
                 <label><input type="radio" data-type="algorithms" name="isotope-filter" /><span>Algorithms</span></label>
               </form>
               <div class="isotope-box">
+                <!-- Chat App -->
+                <div class="isotope-item" data-type="development">
+                  <figure class="snip1321">
+                    <img src="assets/images/chatapp.png" alt="SIEM Solution with Wazuh" />
+                    <figcaption>
+                      <a href="assets/images/chatapp.png" data-lightbox="image-1" data-title="Chatapp"><i class="fa fa-search"></i></a>
+                      <h4>Chatapp</h4>
+                      <p>Developed a real-time chat application using the MERN stack (MongoDB, Express.js, React, Node.js) and Socket.IO for real-time messaging. Implemented features like user registration, messaging, and group chats. Deployed the app on Netlify and Render.com for seamless interaction and accessibility.</p>
+                    </figcaption>
+                  </figure>
+                </div>
                 <!-- SIEM Solution with Wazuh -->
                 <div class="isotope-item" data-type="cybersecurity">
                   <figure class="snip1321">
